zoc/src/check_erasability/snapshots/zoc__check_erasability__tests__ng_1_variant_erasable_with_nonerasable_vcon_def_param_types_to_nonerasable.snap
---
source: zoc/src/check_erasability/tests.rs
expression: pretty_printed_err
---
ErasabilityError::MatcheeTypeTypeIsErasableButReturnTypeTypeIsNotErasable {
    match_: (
        match
        1
        1
        (
            ind
            Set0
            "Bool"
            ()
            (
                (
                    ()
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
        (
            (
                1
                0
            )
        )
    ),
    matchee_type_type: Prop0,
    match_return_type_type: Set0,
}
